# Comfyui-CraftsMan3DWrapper

./: README.md  __init__.py  craftsman_nodes.py  pyproject.toml  requirements.txt
craftsman/config/: config.yaml
craftsman/systems/: utils.py
example_workflows/: hnz_Example_CraftsMan_Stage1.json
workflow_examples/: Example_CraftsMan_Stage1.json  hnz_Example_CraftsMan_Stage1.json
