[project]
name = "ComfyUI-CraftsMan3DWrapper"
description = "A wrapper for CraftsMan"
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["numpy", "Pillow", "trimesh", "rembg", "omegaconf", "PyYAML>=6.0 # Dependency for omegaconf", "diffusers", "transformers", "huggingface-hub", "einops", "safetensors", "pytorch-lightning # Base system class dependency, might be optional for pure inference", "scikit-image # Potential dependency for marching cubes", "PyMCubes # Potential dependency for marching cubes", "accelerate"]

[project.urls]
Repository = "https://github.com/hunzmusic/ComfyUI-CraftsMan3DWrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hunzmusic"
DisplayName = "ComfyUI-CraftsMan3DWrapper"
Icon = ""
